# mathflash

./: .gitignore  LICENSE  Pipfile  README.md  flashcards.py  homepage.py  justfile  keyboard_plugin.py  main.py  modal_server.py  pyproject.toml  utils.py
assets/: keyboard_capture.js
