[project]
name = "mathflash"
version = "0.1.0"
description = "Your project description"
authors = [
    { name="Igor Dvorkin", email="idvorkin@gmail.com" }
]

dependencies = [
    "hyperdiv",
    "requests",
    "modal",
    "fastapi",
    "icecream",
    "typer"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
ruff = "*"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mathflash"]

